2010-06-30  Alan McGovern  <amcgovern@novell.com>

	* System.ComponentModel/DesignerPropertiesTest.cs: Add a few
	  more asserts to check the behaviour of
	  DesignerProperties.SetIsInDesignMode

2010-06-30  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.Controls/RichTextBoxTest.cs: New. Test cases
	that check for null events args
	* System.Windows.Documents/TextPointerTest.cs: New. Test cases
	that check for null parameters.

2010-06-28  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingTest.cs: Update the binding tests
	  to SL4 compatibility. Add SilverlightBugs and MoonlightBugs
	  as appropriate.

2010-06-23  Sebastien Pouliot  <sebastien@ximian.com>

	* System.IO.IsolatedStorage/IsolatedStorageSettingsTest.cs: Add
	test case about the format of the special __LocalSettings file

2010-06-22  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingTest.cs: Add a MoonlightBug to
	  XamlTemplateBinding_Reuse as it's not passing under SL4
	  either. I need to figure out why.

2010-06-21  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Net/WebRequestTest.cs: Add ContentLength test (NI)
	* System.Net.Browser/BaseHttpWebRequestTest.cs: Add ContentLength
	test (applies to both browser and client stack)

2010-06-21  Sebastien Pouliot  <sebastien@ximian.com> 

	* System.Net.Browser/BaseHttpWebRequestTest.cs: Renamed test case
	* System.Net.Browser/BrowserHttpWebRequestTest.cs: Add buffering
	setter test case
	* System.Net.Browser/ClientHttpWebRequestTest.cs: : Add buffering
	setter test case

2010-06-21  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows/ClipboardTest.cs: Add null test on SetText (which
	occurs before the user initiated check)

2010-06-18  Sebastien Pouliot  <sebastien@ximian.com>

	* security/ReflectionEmitTest.cs: Ignore a test that worked only
	before SL4 (ML has the same behavior).
	* System.Windows.Printing/PrintDocumentTest.cs: New. Ensure user
	initiated check on printing.
